argo-4.1-nr/experiment-nr-ss1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nr-exp-app1-svc
spec:
  selector:
    app: nr-exp-app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: nr-exp-app2-svc
spec:
  selector:
    app: nr-exp-app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
